--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,19 @@
     width: 160px;
     height:90px;
 }
+
+div {
+    text-align: center;
+}
+
+.jumbotron {
+    font-family: 'Bungee Inline', cursive;
+}
+
+#gameWrapper {
+    font-family: 'Syncopate', sans-serif;
+}
+
+body {
+    background-image: url("../images/paintbackground.jpeg");
+}
